--- a/Online_Course/Areas/Student/Views/Learning/Lessons.cshtml
+++ b/Online_Course/Areas/Student/Views/Learning/Lessons.cshtml
@@ -187,7 +187,7 @@
                             <div class="absolute -left-[1px] top-4 bottom-4 w-1 bg-primary rounded-r-lg"></div>
                             <div class="flex items-center gap-4 flex-1">
                                 <div class="flex items-center justify-center rounded-full bg-primary text-white size-10 min-w-10 shadow-lg shadow-primary/30">
-                                    <span class="material-symbols-outlined">play_arrow</span>
+                                    <span class="material-symbols-outlined">@(lesson.LessonType == Online_Course.Models.LessonType.Video ? "play_arrow" : "description")</span>
                                 </div>
                                 <div class="flex flex-col gap-1">
                                     <div class="flex items-center gap-2">
